--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Email Us </a></p><br>
     </div>
   </div>
-  <div class="container col-md-12">
-    <h2>Services</h2>
-  </div>
-  <div class="container col-md-12">
-    <h2>Location</h2>
-  </div>
-  <div class="container col-md-12">
-    <h2>Contact Us</h2>
+  <div class="container">
+    <div class="container col-md-12">
+      <h2>Services</h2>
+    </div>
+    <div class="container col-md-12">
+      <h2>Location</h2>
+    </div>
+    <div class="container col-md-12 last">
+      <h2>Contact Us</h2>
+    </div>
   </div>
   <div class="navbar navbar-inverse navbar-fixed-bottom">
     <div class="container">
