changes email address

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <li class="presentation"><a href="#" class="contact"><h3>Location</h3></a></li>
               <li class="presentation"><a href="#" class="contact"><h3>Services</h3></a></li>
               <li class="presentation"><a href="#" class="contact"><h3>(573) 226-5001</h3></a></li>
-              <li class="presentation"><a href="#" class="contact"><h3>tom@cavalier.com</h3></a></li>
+              <li class="presentation"><a href="#" class="contact"><h3>james@countyfuels.com</h3></a></li>
           </ul>
     </div>
   </div>
